# nitroefx

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  imgui.ini  vcpkg.json
.github/workflows/: cmake-build.yml
data/: icon.aps  icon.rc  spa.bt
src/: application.cpp  application.h  application_settings.cpp  application_settings.h  fx.h  gl_texture.cpp  gl_texture.h  gl_viewport.cpp  keybind.h  main.cpp  platform_entry.cpp  random.h  types.h
src/editor/: camera.cpp  camera.h  debug_renderer.cpp  debug_renderer.h  editor.cpp  editor.h  editor_history.cpp  editor_history.h  editor_instance.cpp  editor_instance.h  editor_settings.h  grid_renderer.cpp  grid_renderer.h  help_messages.h  mesh_generator.cpp  mesh_generator.h  particle_renderer.cpp  particle_renderer.h  particle_system.cpp  particle_system.h  project_manager.cpp  project_manager.h  renderer.h
src/fonts/: icon_font.h  tahoma_font.h  tahoma_italic_font.h
src/gfx/: gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_util.h  gl_viewport.cpp  gl_viewport.h
src/imgui/: extensions.cpp  extensions.h
src/spl/: enum_names.h  spl_anim.cpp  spl_archive.cpp  spl_archive.h  spl_behavior.cpp  spl_behavior.h  spl_emitter.cpp  spl_emitter.h  spl_list.h  spl_particle.cpp  spl_particle.h  spl_random.h  spl_resource.cpp  spl_resource.h  spl_texconv.cpp  spl_texture.cpp
src/util/: crc32.h
